<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2017-2019 Román Ginés Martínez Ferrández (rgmf@riseup.net)

    This file is part of Etroped (http://etroped.rgmf.es).

    Etroped is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Etroped is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Foobar.  If not, see <https://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:paddingBottom="88dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_caption_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_walking_time"
            tools:text="@string/time_example"
            android:text="@string/time_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/activity_data_xxlarge"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_label" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="0.1dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_walking_time"
            android:layout_marginTop="50dp"
            android:background="@color/colorDivider"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_pace_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pace_caption_label"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/speed_none"
            android:textSize="@dimen/activity_data_xxlarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_pace_label"
            app:layout_constraintStart_toStartOf="@+id/tv_pace_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_pace_label"
            tools:text="@string/current_pace_example" />

        <TextView
            android:id="@+id/tv_pace_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textAppearance="@style/MyTextAppearance.Small"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pace_label"
            app:layout_constraintLeft_toRightOf="@+id/tv_pace_label"
            app:layout_constraintTop_toTopOf="@+id/tv_pace_label"
            tools:text="@string/pace_unit_example" />

        <TextView
            android:id="@+id/tv_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_caption_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_speed"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/tv_speed"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="15dp"
            android:text="@string/speed_none"
            android:textSize="@dimen/activity_data_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pace"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/current_pace_example" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="0.1dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/tv_pace" />

        <TextView
            android:id="@+id/tv_distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_caption_label"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/distance_example"
            android:text="@string/distance_none"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/activity_data_xxlarge"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_distance_label"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textAppearance="@style/MyTextAppearance.Small"
            tools:text="@string/distance_unit_example"
            app:layout_constraintLeft_toRightOf="@+id/tv_distance_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_distance_label"
            app:layout_constraintTop_toTopOf="@+id/tv_distance_label" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>