<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2017-2019 Román Ginés Martínez Ferrández (rgmf@riseup.net)

    This file is part of Etroped (http://etroped.rgmf.es).

    Etroped is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Etroped is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Foobar.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1"
        tools:text="@string/km_caption_label" />

    <TextView
        android:id="@+id/tv_pace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:text="@string/pace_caption_label" />

    <LinearLayout
        android:id="@+id/rl_bar"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_weight="3">

        <View
            android:id="@+id/v_bar_left"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            android:layout_weight="0.5" />

        <View
            android:id="@+id/v_bar_right"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            android:layout_weight="0.5" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_elevation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="2"
        tools:text="@string/elevation_caption_label" />
</LinearLayout>